--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;}
         h2 {text-align:center; text-decoration: underline;}
-        p {color: orange; font-family: Verdana,Geneva,sans-serif;}
+        p {color: yellowgreen; font-family: Verdana,Geneva,sans-serif;}
         ul {font-style: italic;}
         ol {font-weight: bold; font-size: 20px}
     </style>
